Change in main page

--- a/public/css-files/main-page-style.css
+++ b/public/css-files/main-page-style.css
@@ -10,6 +10,12 @@ body{
     min-height: 100vh 
 }
 
+#title{
+    font-weight: 90px;
+    font-size: 80px;
+    color: black;
+}
+
 .wrapper {
   display: flex;
   justify-content: center;
