--- a/public/css-files/main-page-style.css
+++ b/public/css-files/main-page-style.css
@@ -3,6 +3,8 @@ body{
     height: 100vh;
     width: 100vw;
     background-image: url(../images/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: 'Mina', sans-serif;
 }
 
