Game controller is implemented

--- a/public/css-files/game-page-style.css
+++ b/public/css-files/game-page-style.css
@@ -3,6 +3,7 @@ body{
     background: black;
     font-family: 'Mina', sans-serif;
     color: white;
+    overflow: hidden;
 }
 .tic-btn{
 height: 20vh;
